2003-11-20  Dave Camp  <dave@ximian.com>

	* src/nautilus-navigation-window.c (real_set_content_view_widget):
	Forgot this bit of Srini's patch.

2003-11-20  Dave Camp  <dave@ximian.com>

	* src/nautilus-window-manage-views.c: (handle_view_failure): 
	Disconnect the view.  Patch from Srinivasa 
	Ragavan <sragavan@novell.com>.
	
2003-11-20  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-list-view.c: (button_press_callback): Grab
	focus if clicking on a selected row.  Patch from Sivaiah 
	Nallagatla <snallagatla@novell.com>

2003-11-19  James Willcox  <jwillcox@gnome.org>

	* libnautilus-private/nautilus-icon-canvas-item.c:
	(nautilus_icon_canvas_item_accessible_initialize):

	Remove a unused variable, fixes the build

2003-11-19  Padraig O'Briain  <padraig.obriain@sun.com>

	* libnautilus-private/nautilus-icon-canvas-item.c: Add implementation 
	of AtkAction for NautilusIconCanvasItemAccessible.. Fixes bug #126272.

2003-11-19  Padraig O'Briain  <padraig.obriain@sun.com>

	* src/nautilus-connect-server-dialog.c: Add mnemonics to labels and
	add calls to gtk_label_set_mnemonic_widget. Fixes bug #126803.

2003-11-19  Padraig O'Briain  <padraig.obriain@sun.com>

	* src/file-manger/fm-properties-window.c:
	(attach_owner_menu): Return option_menu created in this function.
	(create_permissions_page): Set mnemonic widget for owner_label.
	Fixes bug #126637.

2003-11-19  Padraig O'Briain  <padraig.obriain@sun.com>

	* libnautilus-private/nautilus-link.c 
	(nautilus_link_get_link_info_given_file_contents): Do not return value
	in function returing void. Fixes build problem.

2003-11-17  David Malcolm <david@davemalcolm.demon.co.uk>

	* src/file-manager/fm-properties-window.c
	(update_properties_window_icon): Set the icon of the GtkWindow for 
	the Properties window whenever the icon in the Basic page is updated.

2003-11-17  Dave Camp  <dave@ximian.com>

	* components/emblem/nautilus-emblem-view.c:
	(nautilus_emblem_view_drag_received_cb): NULL out the keyword