@@ -1,3 +1,9 @@
+2003-11-21  Padraig O'Briain  <padraig.obriain@sun.com>
+
+	* src/file-manager/fm-icon-container.c 
+	(fm_icon_container_instance_init): Add accessible name. 
+	Fixes bug #127485.
+
 2003-11-20  Dave Camp  <dave@ximian.com>
 
 	* src/nautilus-navigation-window.c (real_set_content_view_widget):
